# 2025-HL-FMA-Driverless-Morai-Simulation

Control/: CLAUDE.md  readme.md
Control/data_collection/: CMakeLists.txt  README.md  package.xml  setup.py
Control/data_collection/config/: rosconsole.conf
Control/data_collection/docs/: MORAI_SIGN_CONVENTIONS.md  README_LATERAL.md  lateral_scenarios.md
Control/data_collection/launch/: data_collection.launch  lateral_data_collection.launch
Control/data_collection/scripts/: data_collection_node.py
Control/data_collection/src/data_collection/: __init__.py
Control/data_collection/src/data_collection/data/: plot_data.py
Control/data_collection/src/data_collection/logging/: __init__.py  csv_logger.py
Control/data_collection/src/data_collection/node/: __init__.py  cli_handler.py  interface.py  node_core.py
Control/data_collection/src/data_collection/scenario/: __init__.py  base.py  chirp.py  double_lane_change.py  prbs.py  sine_sweep.py  steady_state_cornering.py  step_accel.py  step_accel_reset.py  step_brake.py  step_steer.py
Control/data_collection/src/data_collection/utils/: __init__.py  conversions.py  filters.py
Control/docs/: PRD_Lateral_MPC.md  PRD_Lateral_System_Identification.md  PRD_Longitudinal_MPC.md  PRD_lat_Phase1.md  PRD_lat_Phase2.md  PRD_lat_Phase3.md  PRD_lat_Phase4.md  PRD_long_Phase1.md  PRD_long_Phase2.md  PRD_long_Phase3.md  PRD_long_Phase4.md  input_topic_structure.md
Control/gear_conversion/: CMakeLists.txt  package.xml
Control/gear_conversion/scripts/: gear_conversion_node.py
Control/lateral_system_identification/: FIXES_SUMMARY.md  README.md  dynamic_model_id.py  identified_parameters.yaml  integrated_system_identifier.py  kinematic_model_id.py  requirements.txt  run_identification.sh  test_integrated_identifier.py  test_params.yaml  verify_fixes.py
Control/lateral_system_identification/src/: __init__.py
Control/mpc_controller/: CMakeLists.txt  package.xml
Control/mpc_controller/config/: mpc_controller.yaml
Control/mpc_controller/docs/: mpc_controller_analysis_plan.md
Control/mpc_controller/include/mpc_controller/: controller_node.hpp  debug_publisher.hpp  lateral_mpc.hpp  longitudinal_mpc.hpp  path_manager.hpp  speed_profile_buffer.hpp  state_estimator.hpp  types.hpp  utils.hpp
Control/mpc_controller/launch/: mpc_controller.launch
Control/mpc_controller/src/: controller_node.cpp  debug_publisher.cpp  lateral_mpc.cpp  longitudinal_mpc.cpp  path_manager.cpp  speed_profile_buffer.cpp  state_estimator.cpp  utils.cpp
Control/mpc_controller/tests/: README.md  test_config.py  test_lateral_mpc.cpp  test_path_manager.cpp  test_speed_profile_buffer.cpp
Control/mpc_lateral_controller/: CMakeLists.txt  README.md  README_DETAILED.md  package.xml  setup.py
Control/mpc_lateral_controller/config/: mpc_params.yaml
Control/mpc_lateral_controller/docs/: Parameter_Tuning.md  lateral_mpc_oscillation_mitigation_ko.md  mpc_param_tuning_nonlin_ko.md  robust_current_index_ko.md
Control/mpc_lateral_controller/launch/: dynamic_integrated_control.launch  kinematic_integrated_control.launch
Control/mpc_lateral_controller/scripts/: lateral_mpc_controller_node.py  path_visualizer.py  performance_monitor.py  startup_notifier.py
Control/mpc_lateral_controller/scripts/tests/: check_p_matrix_issue.py  check_q_sparsity.py  compare_cvxpy_osqp.py  debug_cost_function.py  debug_curvature_osqp.py  debug_osqp.py  debug_osqp_detailed.py  debug_p_matrix.py  test_band_aware_q.py  test_curvature_handling.py  test_kinematic_mpc.py  test_oscillation_mitigation.py  test_osqp_fix.py  test_osqp_kinematic.py
Control/mpc_lateral_controller/src/mpc_lateral_controller/: __init__.py  kinematic_mpc_core.py  lateral_mpc_core.py  osqp_backend_dynamic.py  osqp_backend_kinematic.py  osqp_suppress.py  path_processor.py  state_estimator.py
Control/mpc_longitudinal_controller/: CMakeLists.txt  README.md  package.xml  setup.py
Control/mpc_longitudinal_controller/config/: mpc_params.yaml  mpc_params_backup.yaml
Control/mpc_longitudinal_controller/scripts/: mpc_node.py  speed_profile_adapter.py
Control/offline_analysis/: README.md  params-20250806.npz  setup.py
Control/offline_analysis/offline_analysis/: __init__.py  cli.py  estimator.py  loader.py  multi_run.py  preprocess.py
Control/pure_pursuit/: CMakeLists.txt  package.xml
Control/pure_pursuit/src/: pure_pursuit_node.cpp
Decision/custom_interface/: CMakeLists.txt  package.xml
Decision/custom_interface/msg/: ControlInfo.msg  LateralMpcDebug.msg  LateralMpcStatus.msg  LateralMpcTiming.msg  LateralSystemData.msg  SystemIdData.msg  WaypointArray.msg
Decision/global_planner/: CMakeLists.txt  README.md  package.xml  setup.py
Decision/global_planner/data/: 25hl_global_path_ver3.csv  25hl_global_path_ver3.txt  first_traffic_1.csv  first_traffic_2.csv  second_course.csv  second_traffic_1.csv  second_traffic_2.csv  third_course.csv
Decision/global_planner/launch/: global_planner.launch  global_planner_with_imu.launch
Decision/global_planner/scripts/: global_path_planner.py  global_speed_profile.py  path_occupancy_evaluator.py
Decision/global_planner/src/global_planner/: __init__.py  bag_to_enu_csv.py  path_converter.py  path_utils.py  utm_to_cartesian.py
Perception/point_cloud_process/: CMakeLists.txt  package.xml
Perception/point_cloud_process/launch/: point_cloud_pipeline.launch
Perception/point_cloud_process/scripts/: front_obstacle_monitor.py
Perception/point_cloud_process/src/: (FYI)cone_detection.cpp  collision_detector_node.cpp  point_cloud_cluster_node.cpp  point_cloud_processor.cpp
Perception/traffic_light_detection/: CMakeLists.txt  package.xml
Perception/traffic_light_detection/launch/: traffic_light_detection.launch
Perception/traffic_light_detection/scripts/: image_capture_node.py  stop_line_detector.py  traffic_light_detector.py
Perception/vehicle_localization/: CMakeLists.txt  package.xml
Perception/vehicle_localization/data/: imu_calibration.yaml
Perception/vehicle_localization/launch/: vehicle_localization.launch
(+14 files in other folders)
