<?xml version="1.0"?>
<package format="2">
  <name>data_collection</name>
  <version>0.0.0</version>
  <description>The data_collection package</description>


  <maintainer email="kikiws70@gmail.com">kikiws70</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>custom_interface</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>morai_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>custom_interface</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>morai_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>custom_interface</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>morai_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
  </export>
</package>
