<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.0.1</version>
  <description>Pure Pursuit controller (rear-axle center as base)</description>

  <maintainer email="imhyeonwoo21@gmail.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>morai_msgs</depend>
  <depend>custom_interface</depend>
</package>
